--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="card-body">
                         <h5 class="card-title"> Project 4: Machine Learning for Land use classification</h5>
                         <p class="card-text">In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. We need to protect these areas from rapid urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. Three machine learning algorithms – Random Forest, Support Vector Machine, and Minimum Distance (K-Nearest Neighbour) – were employed to classify multi-temporal satellite imagery. Subsequent change detection analyses were conducted using both Google Earth Engine and ArcGIS Pro to elucidate the patterns of transformations.</p>
-                        <p><strong>Duration:</strong> [2022 - present]</p>
+                        <p><strong>Duration:</strong> [2022]</p>
                         <p><strong>Country:</strong> [West African Landscapes]</p>
                         <p><strong>Mentor/Referee:</strong> [Prof. Elmar Veenendaal, Michiel van Eupen]</p>
                         <a href="https://ee-desmond.projects.earthengine.app/view/mltry2" class="btn btn-primary">Read More</a>
@@ -141,8 +141,14 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%205.png" class="card-img-top" alt="Portfolio Item 5">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 5: PhD collaboration: Conservation Biocontrol</h5>
-                        <p class="card-text">The worldwide sustainability of coffee production is threatened by pests, diseases, and global warming. In Colombia, the Coffee Berry Borer (CBB) is a major problem. This beetle reduces crop yield and quality by drilling the coffee berries and feeding on the beans during the beetle’s immature stages. Coffee farmers have developed CBB control strategies such as the use of chemical insecticides, the manual collection of infested berries, and the use of entomopathogenic fungi, but despite these practices, CBB remains a major problem in coffee production. A promising yet understudied approach to CBB control is conservation biological control (CBC), defined as the regulation of pest populations by supporting populations of naturally occurring natural enemies.</p>
+                        <h5 class="card-title"> Project 5: PhD collaboration: Modelling Conservation Biocontrol and Land use</h5>
+                        <p class="card-text">In Colombia, the Coffee Berry Borer (CBB) is a major problem. 
+                            This beetle reduces crop yield and quality by drilling the coffee berries and feeding on the beans 
+                            during the beetle’s immature stages. Coffee farmers have developed CBB control strategies such as the use 
+                            of chemical insecticides, the manual collection of infested berries, and the use of entomopathogenic fungi, 
+                            but despite these practices, CBB remains a major problem in coffee production. A promising yet understudied approach to 
+                            CBB control is conservation biological control (CBC). In this study, we model land uses in these coffee-grown areas and connect
+                           the regulation of pest populations by supporting populations of naturally occurring natural enemies.</p>
                         <p><strong>Duration:</strong> [2022 - 2025]</p>
                         <p><strong>Country:</strong> [Colombia]</p>
                         <p><strong>Mentor/Referee:</strong> [Prof Dicke, Marcel (Promotor)Bianchi, Dr. Felix (Co-promotor)]</p>
@@ -166,8 +172,8 @@
                         <p><strong>Country:</strong> [USA and All African countries]</p>
                         <p><strong>Mentor/Referee:</strong> [Louis Fleming-
                             Forest Service International Programs]</p>
-                        <a href="https://www.fs.usda.gov/about-agency/international-programs" class="btn btn-primary">Read More</a>
-                        <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
+                        <a href="https://drive.google.com/file/d/1JeNH4lbmN3ymBNUpuB-wvB7uKzUFmBm2/view?usp=sharing" class="btn btn-primary">Read More</a>
+                        <a href="https://www.fs.usda.gov/about-agency/international-programs/where-we-work" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
                     </div>
                 </div>
             </div>
