--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                         <p><strong>Mentor/Referee:</strong> [Louis Fleming-
                             Forest Service International Programs]</p>
                         <a href="https://drive.google.com/file/d/1JeNH4lbmN3ymBNUpuB-wvB7uKzUFmBm2/view?usp=sharing" class="btn btn-primary">Read More</a>
+                        <a href="https://www.fs.usda.gov/about-agency/international-programs/where-we-work" class="btn btn-primary">Read More</a>
                         <a href="https://www.fs.usda.gov/about-agency/international-programs/where-we-work" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
                     </div>
                 </div>
