--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <p><strong>Country:</strong> [West African Landscapes]</p>
                         <p><strong>Mentor/Referee:</strong> [ Prof. Elmar Veenendaal, Michiel van Eupen]</p>
                         <a href="https://ee-desmond.projects.earthengine.app/view/intensity-analysis" class="btn btn-primary">Read More</a>
-                        <a href="https://docs.google.com/document/d/1SUVucrWaecYkWjbNnV8l_FUWHNlSWdRR/edit#heading=h.gjdgxs" class="btn btn-primary">Read More</a>
+                        <a href="https://onedrive.live.com/edit.aspx?resid=3460E105B0B5A847!3875&cid=3460e105b0b5a847&authkey=!AJBc6fjlt8fP5a8&CT=1695808210549&OR=ItemsView" class="btn btn-primary">Read More</a>
                         <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         <p><strong>Country:</strong> [West African Landscapes]</p>
                         <p><strong>Mentor/Referee:</strong> [Prof. Elmar Veenendaal, Michiel van Eupen]</p>
                         <a href="https://ee-desmond.projects.earthengine.app/view/mltry2" class="btn btn-primary">Read More</a>
-                        <a href="https://docs.google.com/document/d/1wj4RUiYYyubnZwDX3184p1lZLzUYR8YI/edit#heading=h.gjdgxs" class="btn btn-primary">Read More</a>
+                        <a href="https://onedrive.live.com/edit.aspx?resid=3460E105B0B5A847!3874&cid=3460e105b0b5a847&authkey=!AJBc6fjlt8fP5a8&CT=1695932142074&OR=ItemsView" class="btn btn-primary">Read More</a>
                         <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
                     </div>
                 </div>
