--- a/index.html
+++ b/index.html
@@ -82,3 +82,79 @@
         </div>
     </div>
 </section>
+
+<!-- Projects Section Continued -->
+<section id="projects-continued" class="py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Project 4 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207a.png" class="card-img-top" alt="Portfolio Item 7">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 9: Academische consultatie training</h5>
+                        <p class="card-text">Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)...</p>
+                        <a href="https://www.youtube.com/watch?v=BZMSFcrSbwU" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 5 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%208.png" class="card-img-top" alt="Portfolio Item 8">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 10: Integrated Fire Management</h5>
+                        <p class="card-text">2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions...</p>
+                        <a href="https://pyrolife.lessonsonfire.eu/" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 6 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%209.png" class="card-img-top" alt="Portfolio Item 9">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 11: Just City-Political Dilemas in Spatial Planning</h5>
+                        <p class="card-text">Poplar lake is an active and lively neighborhood. It is structured by three distinct landmarks...</p>
+                        <a href="https://drive.google.com/file/d/1QTXmt-8ziLCpwbjRwOOAl7Ty64u09-ms/view?usp=sharing" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Project 7 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2010.png" class="card-img-top" alt="Portfolio Item 10">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 12: Cleaner cities (DEALS)</h5>
+                        <p class="card-text">As part of the targeted objectives of the DEALS project...</p>
+                        <a href="http://kma.gov.gh/kma/?almere-and-vng-international-support-me-and-my-tree-project-by-kma&page=5521" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 8 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2012.png" class="card-img-top" alt="Portfolio Item 12">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 13: Energyzing Development</h5>
+                        <p class="card-text">Energizing development is implemented as part of the GIZ Renewable Energy Project in Ghana...</p>
+                        <a href="https://www.giz.de/en/worldwide/324.html" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 9 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2011.png" class="card-img-top" alt="Portfolio Item 11">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 14: Water Treatment & Expansion</h5>
+                        <p class="card-text">The project, which began in September 2011, was funded through a 21.6 million dollar loan facility...</p>
+                        <a href="https://www.graphic.com.gh/news/general-news/expansion-of-asante-mampong-water-treatment-plant-completed.html" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
