--- a/index.html
+++ b/index.html
@@ -158,3 +158,57 @@
         </div>
     </div>
 </section>
+
+<!-- Projects Section Continued -->
+<section id="projects-continued-2" class="py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Project 10 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2013.png" class="card-img-top" alt="Portfolio Item 13">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 15: Metropolitan Workshop</h5>
+                        <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Metropolitan area(Ejura)...</p>
+                        <a href="https://drive.google.com/file/d/1JPRtH3TVO2Sc_0HBjAhSWuVjNctgyoGV/view?usp=sharing" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 11 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2014.png" class="card-img-top" alt="Portfolio Item 14">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 16: Muncipal Workshop</h5>
+                        <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a muncipality(Mampong)...</p>
+                        <a href="https://drive.google.com/file/d/1lKlySSblodA4L_sSVkT84sPXR4IBrwoP/view?usp=sharing" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Project 12 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2015.png" class="card-img-top" alt="Portfolio Item 15">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 17: Rural Workshop</h5>
+                        <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Rural Area(Bobiem)...</p>
+                        <a href="https://drive.google.com/file/d/1IExWqnnfK5OgpUV4qZms5gAkrP6h1nUh/view?usp=sharing" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!-- Project 13 -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2016.png" class="card-img-top" alt="Portfolio Item 16">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 18: IDEA</h5>
+                        <p class="card-text">Our Goal is to: Improve livelihoods in a manner that reduces poverty and empowers the young and vulnerable...</p>
+                        <a href="https://www.facebook.com/17IDEARevolutionGH/" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
