--- a/index.html
+++ b/index.html
@@ -212,3 +212,34 @@
         </div>
     </div>
 </section>
+
+<!-- Modal for requesting access -->
+<div class="modal fade" id="requestAccessModal" tabindex="-1" role="dialog" aria-labelledby="requestAccessModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="requestAccessModalLabel">Request Access</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Please enter your email to request access to the document.</p>
+                <form>
+                    <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Request Access</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Link to Bootstrap JS and Popper.js for Bootstrap functionalities -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
