--- a/index.html
+++ b/index.html
@@ -3,6 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Desmond Lartey's Portfolio</title>
+    <!-- Link to Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        /* This is for the hero background image */
+        .hero-background {
+            background: url(https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/background.png) no-repeat center center;
+            background-size: cover;
+            color: #ffffff; /* Text color, you can adjust as needed */
+        }
+    </style>
+</head>
+
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Desmond Lartey</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#about">About Me</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+    
+<!-- Hero Section with background image -->
+<section class="jumbotron text-center hero-background">
+    <h1 class="display-4">Hello, I'm Desmond Lartey!</h1>
+    <p class="lead">Landscape Planner | Researcher | GIS and Remote Sensing Enthusiast |Sense Making and Decision Making Specialist</p>
+</section>
+
+<!-- About Me Section -->
+<section id="about" class="py-5">
+    <div class="container">
+        <h2>About Me</h2>
+        <p>🌱 I work on regional to global scale studies addressing environmental change and climate change using geospatial techniques.
+💼 I am a 5-star rated Researcher and critical thinker.
+💼 With over 5 years of experience in the geospatial domain, I have successfully completed several projects using quantitative, qualitative and geospatial tools.
+👯 I am open to collaboration opportunities related to geospatial research, environmental analysis and urban/rural planning.</p>
+        <a href="https://github.com/desmond-lartey" target="_blank" class="btn btn-primary">Read More about my works on github</a>
+    </div>
+</section>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desmond's Portfolio</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
