--- a/index.html
+++ b/index.html
@@ -1,26 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desmond Lartey's Portfolio</title>
-    <!-- Link to Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <style>
-        /* This is for the hero background image */
+        /* Navbar Styling */
+        .navbar {
+            background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+        }
+
+        /* Hero Section Styling */
         .hero-background {
-            background: url(https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/background.png) no-repeat center center;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/background.png) no-repeat center center;
             background-size: cover;
-            color: #ffffff; /* Text color, you can adjust as needed */
+            color: #ffffff;
+        }
+
+        /* Project Card Styling */
+        .card {
+            border: none;
+            overflow: hidden;
+            transition: transform .2s;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card-img-top {
+            transition: transform .2s;
+        }
+
+        .card:hover .card-img-top {
+            transform: scale(1.1);
         }
     </style>
-</head>)
+</head>
 
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <a class="navbar-brand" href="#">Desmond Lartey</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +64,7 @@
     </div>
 </nav>
 
-<!-- Hero Section with background image -->
+<!-- Hero Section -->
 <section class="jumbotron text-center hero-background">
     <h1 class="display-4">Hello, I'm Desmond Lartey!</h1>
     <p class="lead">Landscape Planner | Researcher | GIS and Remote Sensing Enthusiast |Sense Making and Decision Making Specialist</p>
@@ -51,15 +74,10 @@
 <section id="about" class="py-5">
     <div class="container">
         <h2>About Me</h2>
-        <p>🌱 I work on regional to global scale studies addressing environmental change and climate change using geospatial techniques.
-💼 I am a 5-star rated Researcher and critical thinker.
-💼 With over 5 years of experience in the geospatial domain, I have successfully completed several projects using quantitative, qualitative and geospatial tools.
-👯 I am open to collaboration opportunities related to geospatial research, environmental analysis and urban/rural planning.</p>
-        <a href="https://github.com/desmond-lartey" target="_blank" class="btn btn-primary">Read More about my works on github</a>
+        <!-- ... [Your About Content Here] ... -->
     </div>
 </section>
-
-
+    
 <!-- Portfolio Section -->
 <section id="portfolio" class="py-5 bg-light">
     <div class="container">
@@ -401,7 +419,17 @@
       </div>
     </div>
   </div>
-<!-- Link to Bootstrap JS and Popper.js for Bootstrap functionalities -->
+    
+<!-- Projects Section -->
+<section id="projects" class="py-5">
+    <div class="container">
+        <!-- ... [Your Projects Content Here] ... -->
+    </div>
+</section>
+
+<!-- ... [Continue with other sections, modals, etc.] ... -->
+
+<!-- Link to Bootstrap JS and Popper.js -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
