--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </section>
     
 <!-- Portfolio Section -->
-<section id="portfolio" class="py-5 bg-light">
+<section id="projects" class="py-5">
     <div class="container">
         <h2 class="text-center">My Portfolio</h2>
 
