--- a/index.html
+++ b/index.html
@@ -74,9 +74,14 @@
 <section id="about" class="py-5">
     <div class="container">
         <h2>About Me</h2>
-        <!-- ... [Your About Content Here] ... -->
+        <p>🌱 I work on regional to global scale studies addressing environmental change and climate change using geospatial techniques.
+💼 I am a 5-star rated Researcher and critical thinker.
+💼 With over 5 years of experience in the geospatial domain, I have successfully completed several projects using quantitative, qualitative and geospatial tools.
+👯 I am open to collaboration opportunities related to geospatial research, environmental analysis and urban/rural planning.</p>
+        <a href="https://github.com/desmond-lartey" target="_blank" class="btn btn-primary">Read More about my works on github</a>
     </div>
 </section>
+
     
 <!-- Portfolio Section -->
 <section id="projects" class="py-5">
