--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Desmond Lartey's Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+<!-- AOS CSS -->
+<link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css">
+
     <style>
         /* Navbar Styling */
         .navbar {
@@ -37,6 +40,13 @@
         .card:hover .card-img-top {
             transform: scale(1.1);
         }
+
+        .btn-primary:hover {
+    background-color: #0069d9; /* Slightly darker blue on hover */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Shadow effect */
+    transition: background-color 0.3s, box-shadow 0.3s; /* Smooth transition */
+}
+
     </style>
 </head>
 
@@ -430,5 +440,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- AOS JS -->
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </body>
 </html>
