--- a/index1.html
+++ b/index1.html
@@ -195,7 +195,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%206.png" class="card-img-top" alt="Portfolio Item 6">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 6: Collaboration: Wildfire Assessment</h5>
+                        <h5 class="card-title"> Project 6 Wildfire Assessment</h5>
                         <p class="card-text">The International Programs Office of the United States Forest Service is embarking on an effort to assess the
                             wildland fire situation across Africa. The assessments will be guided by the Integrated Fire Management
                             (IFM) approach, which incorporates a holistic understanding of fire on the landscape and the many trade-offs of
