--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									<header>
 										<span class="date">May, 2023</span>
 										<h2><a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2">Project 5 <br />
-											PhD collaboration: Modelling Conservation Biocontrol and Land use</a></h2>
+											PhD collaboration : Modelling Conservation Biocontrol and Land use</a></h2>
 									</header>
 									<a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%205.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -123,26 +123,45 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">April, 2023</span>
+										<h2><a href="https://github.com/desmond-lartey/Wildfire-Assessment">Project 6 <br />
+											Collaboration: Wildfire Assessment</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://www.fs.usda.gov/about-agency/international-programs/where-we-work" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%206.png" alt="" /></a>
+									<p>The International Programs Office of the United States Forest Service is embarking on an effort to assess the
+										wildland fire situation across Africa. The assessments will be guided by the Integrated Fire Management
+										(IFM) approach, which incorporates a holistic understanding of fire on the landscape and the many trade-offs of
+										management actions. The assessments will inform the design and implementation of country-specific strategic
+										programming by International Programs staff.</p>
+										<p><strong>Mentor/Referee:</strong> [Louis Fleming-Forest Service International Programs]</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/desmond-lartey/Wildfire-Assessment" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">January, 2023</span>
+										<h2><a href="https://github.com/desmond-lartey/Geodatabase-PostgreSQL-PostGIS-mySQL">Project 7<br />
+											Geodatabase-Parking Management</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://docs.google.com/document/d/1ey1ZCo_69SQlAMDclRe5yi_ukQyVTJPs/edit?usp=sharing&ouid=100089096446664020253&rtpof=true&sd=true" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Picture7a.png" alt="" /></a>
+									<p>As urbanization continues to increase, managing parking behaviour in municipalities has become an important aspect of urban planning (Litman, 2017). With the rise in the number of vehicles on the roads, finding available parking spaces has become a significant challenge, causing congestion, pollution, and frustration for both drivers and pedestrians (Shoup, 2006). Therefore, understanding parking behaviour is a critical area of study for municipalities to manage and improve parking efficiency. In this project assignment, students are confronted with documenting a geodatabase schema, the processes and how this can be implemented to answer specific information requests for the Municipality of Alkmaar.</p>
+									<p><strong>Mentor/Referee:</strong> [Dr. Maurice de kleijn]</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://docs.google.com/document/d/1ey1ZCo_69SQlAMDclRe5yi_ukQyVTJPs/edit?usp=sharing&ouid=100089096446664020253&rtpof=true&sd=true" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">November, 2022</span>
+										<h2><a href="https://drive.google.com/file/d/1HeVMG3Fnfuuf--d3sVUK25VTGQqTaKtd/view?usp=sharing">Project 8<br />
+											Modelling Biomass for Heat Production</a></h2>
+									</header>
+									<a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207.png" alt="" /></a>
+									<p>As urbanization continues to increase, managing parking behaviour in municipalities has become an important aspect of urban planning (Litman, 2017). With the rise in the number of vehicles on the roads, finding available parking spaces has become a significant challenge, causing congestion, pollution, and frustration for both drivers and pedestrians (Shoup, 2006). Therefore, understanding parking behaviour is a critical area of study for municipalities to manage and improve parking efficiency. In this project assignment, students are confronted with documenting a geodatabase schema, the processes and how this can be implemented to answer specific information requests for the Municipality of Alkmaar.</p>
+									<p><strong>Mentor/Referee:</strong> [ Prof. Ac. Jaar]</p>
+									<ul class="actions special">
+										<li><a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
@@ -190,24 +209,24 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Wageningen<br />
+								Netherlands</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="0645-313-628">(+31) 0645-313-628</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="larteydesmond3@gmail.com">larteydesmond3@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/desmondlarte/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/desmond_lx/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/desmond-lartey" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
