--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 					<div id="intro">
 						<h1><br />
 						</h1>
-						<p>🌱 I work on regional to global scale studies addressing environmental change and climate change using geospatial techniques.
-							💼 I am a 5-star rated Researcher and critical thinker.
-							💼 With over 5 years of experience in the geospatial domain, I have successfully completed several projects using quantitative, qualitative and geospatial tools.
-							👯 I am open to collaboration opportunities related to geospatial research, environmental analysis and urban/rural planning. <a href="https://twitter.com/Desmondlartey17">@Geospatial Analyst</a> for <a href="https://github.com/desmond-lartey">Portfolio</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p><a href="https://html5up.net/license">Creative Commons license</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
