--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">This is Massively</a></li>
-							<li class="active"><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="profile.html">Profile</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -45,14 +45,16 @@
 								<header class="major">
 									<span class="date">April 25, 2017</span>
 									<h1>This is a<br />
-									Generic Page</h1>
+									Profile Page</h1>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
+								<p>I bring a unique blend of skills and experiences to the table that make me a strong candidate for diverse roles. With a background in environmental and spatial landscape planning and a passion for sustainable urban development, I have a keen understanding of the intersection between technology, design, and social innovation. My experience in GIS and remote sensing technologies, coupled with my work on projects like the Sustainable Green Concept App, showcases my ability to leverage technology for societal benefits.
+
+									</p>
+								<p>Moreover, my adaptability, demonstrated through my readiness to relocate and embrace new cultures, along with my strong interpersonal and communication skills, make me an ideal fit for roles that require a global outlook and team collaboration. Whether in a technical, planning, or sales-oriented role, I am committed to bringing innovative, sustainable solutions to the table, making a positive impact on projects and organizations I work with. My diverse skill set, international perspective, and commitment to sustainability and innovation are assets that I am excited to bring to your team.</p>
 							</section>
 
 					</div>
