--- a/generic.html
+++ b/generic.html
@@ -56,9 +56,9 @@
 						<span class="date"></span>
 						<h1>This is my<br />
 						Profile Page</h1>
-						<p>Mapping Sustainable Futures: Leveraging GIS And Data-Driven Approaches to Enhance Urban Planning, Optimize Resource
+						<p>Mapping Sustainable Futures: Leveraging GIS And Data-Driven Approaches to Enhance Urban Planning, Optimize Resource Use, and Promote Environmental Sustainability
 							<br />
-							Use, and Promote Environmental Sustainability<br />
+							<br />
 						</p>
 					</header>
 					<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
