--- a/generic.html
+++ b/generic.html
@@ -54,8 +54,8 @@
 						});
 						</script>
 						<span class="date"></span>
-						<h1>This is my<br />
-						Profile Page</h1>
+						<h1>My Profile<br />
+						</h1>
 						<p>Mapping Sustainable Futures: Leveraging GIS And Data-Driven Approaches to Enhance Urban Planning, Optimize Resource Use, and Promote Environmental Sustainability
 							<br />
 							<br />
