--- a/generic.html
+++ b/generic.html
@@ -94,12 +94,16 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Wageningen<br />
+								Netherlands</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(+31) 645313628</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">larteydesmond3@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
