--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</header>
 								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.urbancyclinginstitute.org/projects/" class="button large">View Project</a></li>
+									<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -121,7 +121,7 @@
 									<header>
 										<span class="date">April, 2023</span>
 										<h2><a href="https://github.com/desmond-lartey/Wildfire-Assessment">Project 6 <br />
-											Collaboration: Wildfire Assessment</a></h2>
+											Wildfire Assessment</a></h2>
 									</header>
 									<a href="https://www.fs.usda.gov/about-agency/international-programs/where-we-work" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%206.png" alt="" /></a>
 									<p>The International Programs Office of the United States Forest Service is embarking on an effort to assess the
@@ -154,10 +154,87 @@
 											Modelling Biomass for Heat Production</a></h2>
 									</header>
 									<a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207.png" alt="" /></a>
-									<p>As urbanization continues to increase, managing parking behaviour in municipalities has become an important aspect of urban planning (Litman, 2017). With the rise in the number of vehicles on the roads, finding available parking spaces has become a significant challenge, causing congestion, pollution, and frustration for both drivers and pedestrians (Shoup, 2006). Therefore, understanding parking behaviour is a critical area of study for municipalities to manage and improve parking efficiency. In this project assignment, students are confronted with documenting a geodatabase schema, the processes and how this can be implemented to answer specific information requests for the Municipality of Alkmaar.</p>
+									<p>In this project, the challenge is to identify what the best location of biomass production is, the available biomass within a zone of 25km and the energy content within the zone of biomass plants for heat production. This assessment is based on range of factors such as weight of biomass that can be extracted, and available energy content per year per different land use categories.</p>
 									<p><strong>Mentor/Referee:</strong> [ Prof. Ac. Jaar]</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								</article>
+								<article>
+									<header>
+										<span class="date">May, 2021</span>
+										<h2><a href="https://www.youtube.com/watch?v=BZMSFcrSbwU">Project 9<br />
+											Academische consultatie training</a></h2>
+									</header>
+									<a href="https://www.youtube.com/watch?v=BZMSFcrSbwU" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207a.png" alt="" /></a>
+									<p>•Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)
+										• Stakeholder engagement and Process analysis
+										• Gegevensverzameling en analyse
+										• Designing climate implementation mechanisms
+										• Schrijven van rapporten.</p>
+									<p><strong>Mentor/Referee:</strong> [Dr. Barbara Tempels, dr.ir. M (Marlies) Brinkhuijsen]</p>
+									<ul class="actions special">
+										<li><a href="https://www.youtube.com/watch?v=BZMSFcrSbwU" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								</article>
+								<article>
+									<header>
+										<span class="date">January, 2022</span>
+										<h2><a href="https://fire-res.eu/about-fire-res/">Project 10<br />
+											Integrated Fire Management</a></h2>
+									</header>
+									<a href="https://fire-res.eu/about-fire-res/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%208.png" alt="" /></a>
+									<p>2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions, high fire activity in temperate and boreal areas outside typical fire seasons and regions, and politicized deforestation fires in the Amazon. 2019 ended with a fire crisis in Australia that has never been seen before. Striking amidst these fires making year-round headlines is the lack of attention for fires in developing countries.</p>
+									<p><strong>Mentor/Referee:</strong> [Dr. Cathelijne Stoof]</p>
+									<ul class="actions special">
+										<li><a href="https://pyrolife.lessonsonfire.eu/" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">March, 2020</span>
+										<h2><a href="https://drive.google.com/file/d/1QTXmt-8ziLCpwbjRwOOAl7Ty64u09-ms/view?usp=sharing">Project 11<br />
+											Just City-Political Dilemas in Spatial Planning</a></h2>
+									</header>
+									<a href="https://drive.google.com/file/d/1QTXmt-8ziLCpwbjRwOOAl7Ty64u09-ms/view?usp=sharing" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%209.png" alt="" /></a>
+									<p>Poplar lake is an active and lively neighborhood. It is structured by three distinct landmarks, lake poplar, Sterflat reloaded and the community center and urban edges which mark the orders of the different districts and the lakeshore (Lynch, 1960)</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Thomas Hartmann]</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/1QTXmt-8ziLCpwbjRwOOAl7Ty64u09-ms/view?usp=sharing" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">March, 2019</span>
+										<h2><a href="http://kma.gov.gh/kma/?almere-and-vng-international-support-me-and-my-tree-project-by-kma&page=5521">Project 12<br />
+											Cleaner cities (DEALS)</a></h2>
+									</header>
+									<a href="http://kma.gov.gh/kma/?almere-and-vng-international-support-me-and-my-tree-project-by-kma&page=5521" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2010.png" alt="" /></a>
+									<p>As part of the targeted objectives of the DEALS project, a pre-testing exercise of the data collection
+										instrument was undertaken as a follow-up to an earlier held training workshop in confidence of
+										training selected enumerators and supervisors on the goals and objectives of the project. In this
+										regard, the pre-testing exercise was primarily done with a mission and view to identify the likely
+										challenges enumerators and respondents (units of enquiry) may face during the main survey period,
+										conflicting issues such as translation barriers and other worth-noting technical errors in the data
+										collection instrument for the project</p>
+									<p><strong>Mentor/Referee:</strong> [Dr. Prince Anokye]</p>
+									<ul class="actions special">
+										<li><a href="http://kma.gov.gh/kma/?almere-and-vng-international-support-me-and-my-tree-project-by-kma&page=5521" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">June, 2019</span>
+										<h2><a href="https://www.giz.de/en/worldwide/324.html">Project 13<br />
+											Energyzing Development</a></h2>
+									</header>
+									<a href="https://www.giz.de/en/worldwide/324.html" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2012.png" alt="" /></a>
+									<p>Energizing development is implemented as part of the GIZ Renewable Energy Project in Ghana. EnDev promotes sustainable access to modern energy services that meet the needs of the poor, for a long lasting, aﬀordable, and appreciated by users</p>
+									<p><strong>Mentor/Referee:</strong> [Dr. Ameka Otchere]</p>
+									<ul class="actions special">
+										<li><a href="https://www.giz.de/en/worldwide/324.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
